--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.1.1",
     "typescript": "~4.5.5"
   },
   "browserslist": [
